--- a/index.html
+++ b/index.html
@@ -22,104 +22,200 @@
     <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body class="page page-home">
+    <header class="page__header">
+        <div class="row"></div>
+    </header>
 
-    <div class="container">
-        <div class="row col-1-2">
-            <div class="column">
-                <p>logo here</p>
-            </div>
-            <div class="column">
-                <div class="sub-row col-5">
-                    <div class="column">link</div>
-                    <div class="column">link</div>
-                    <div class="column">link</div>
-                    <div class="column">link</div>
-                    <div class="column">link</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row col-5">
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row col-3">
-            <div class="column row-span">
-                <h2>section heading</h2>
-            </div>
-
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row col-4">
-            <div class="column row-span">
-                <h2>section heading</h2>
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-            <div class="column">
-
-            </div>
-        </div>
-    </div>
-    <div class="container">
+    <div class="page__slider">
         <div class="row">
             <div class="column">
-
+                <img src="img/placeholder.svg" alt="slider">
             </div>
         </div>
     </div>
-    <div class="container">
+
+    <div class="page__intro">
+        <div class="row">
+            <h1 class="heading">
+                Hey guys! This is a Metrolics theme.<br>
+                It sports a responsive layout with a mobile layout.
+            </h1>
+        </div>
+    </div>
+
+    <section class="about">
         <div class="row">
             <div class="column">
+                <h2 class="heading">
+                    Things That We Do
+                </h2>
+            </div>
+            <div class="column">
+                <h3 class="heading">Web Solutions</h3>
+            </div>
+            <div class="column">
+                <h3 class="heading">Photography</h3>
+            </div>
+            <div class="column">
+                <h3 class="heading">Web Development</h3>
+            </div>
+            <div class="column">
+                <h3 class="heading">Web Designs</h3>
+            </div>
+        </div>
+    </section>
 
+    <section class="projects--new">
+        <div class="row">
+            <div class="column">
+                <h2 class="heading">
+                    What's Up Lately?
+                </h2>
+            </div>
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+        </div>
+    </section>     <!-- projects-new ends here -->
+
+    <section class="projects">
+        <div class="row">
+            <div class="column">
+                <h2 class="heading">
+                    Our Latest Projects
+                </h2>
+            </div>
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+            <div class="column">
+                <figure class="project">
+                    <img src="img/placeholder.svg" alt="placeholder">
+                    <figcaption class="project__caption">
+                        <h3 class="heading">Sample Image Post</h3>
+                    </figcaption>
+                </figure>
+            </div> <!-- proj col ends here -->
+        </div>
+    </section>     <!-- projects-new ends here -->
+
+    <section class="thingsofabove">
+        <div class="row">
+            <div class="column">
+                <h2 class="heading">
+                    Thingsofabove
+                </h2>
+            </div>
+            <div class="column">
+                <p>GUI element here (accordeon menu picture)</p>
+            </div>
+            <div class="column">
+                <p>GUI element here (tab menu picture)</p>
+            </div>
+        </div>
+    </section>
+
+    <div class="sponsors">
+        <div class="row">
+            <div class="column">
+                <img src="img/placeholder.svg" alt="placeholder">
+            </div>
+            <div class="column">
+                <img src="img/placeholder.svg" alt="placeholder">
+            </div>
+            <div class="column">
+                <img src="img/placeholder.svg" alt="placeholder">
+            </div>
+            <div class="column">
+                <img src="img/placeholder.svg" alt="placeholder">
+            </div>
+            <div class="column">
+                <img src="img/placeholder.svg" alt="placeholder">
             </div>
         </div>
     </div>
 
-
+    <footer class="page__footer">
+        <div class="row">
+            <div class="page__footer__intro column">
+                <h3 class="heading">
+                    Pewee Herman Intro
+                </h3>
+                <p>Pewee Herman text here</p>
+            </div>
+            <div class="column">
+                <h4>footer subheading</h4>
+            </div>
+            <div class="column">
+                <h4>footer subheading</h4>
+            </div>
+            <div class="column">
+                <h4>footer subheading</h4>
+            </div>
+            <div class="column">
+                <h4>footer subheading</h4>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
