Changed placeholders to fortnite placeholders instead

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="page__slider">
         <div class="row">
             <div class="column">
-                <img src="img/placeholder.svg" alt="slider">
+                <img src="img/Fortnite.png" alt="slider">
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
             </div>
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -83,7 +83,7 @@
             </div> <!-- proj col ends here -->
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -91,7 +91,7 @@
             </div> <!-- proj col ends here -->
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -109,7 +109,7 @@
             </div>
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -117,7 +117,7 @@
             </div> <!-- proj col ends here -->
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -125,7 +125,7 @@
             </div> <!-- proj col ends here -->
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -133,7 +133,7 @@
             </div> <!-- proj col ends here -->
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -141,7 +141,7 @@
             </div> <!-- proj col ends here -->
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -149,7 +149,7 @@
             </div> <!-- proj col ends here -->
             <div class="column">
                 <figure class="project">
-                    <img src="img/placeholder.svg" alt="placeholder">
+                    <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
                         <h3 class="heading">Sample Image Post</h3>
                     </figcaption>
@@ -177,19 +177,19 @@
     <div class="sponsors">
         <div class="row">
             <div class="column">
-                <img src="img/placeholder.svg" alt="placeholder">
+                <img src="img/Fortnite.png" alt="placeholder">
             </div>
             <div class="column">
-                <img src="img/placeholder.svg" alt="placeholder">
+                <img src="img/Fortnite.png" alt="placeholder">
             </div>
             <div class="column">
-                <img src="img/placeholder.svg" alt="placeholder">
+                <img src="img/Fortnite.png" alt="placeholder">
             </div>
             <div class="column">
-                <img src="img/placeholder.svg" alt="placeholder">
+                <img src="img/Fortnite.png" alt="placeholder">
             </div>
             <div class="column">
-                <img src="img/placeholder.svg" alt="placeholder">
+                <img src="img/Fortnite.png" alt="placeholder">
             </div>
         </div>
     </div>
