--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
 
     <section class="about">
-        <div class="row">
-            <div class="column">
+        <div class="row l-col-4">
+            <div class="column span-full">
                 <h2 class="heading">
                     Things That We Do
                 </h2>
@@ -67,8 +67,8 @@
     </section>
 
     <section class="projects--new">
-        <div class="row">
-            <div class="column">
+        <div class="row m-col-2 l-col-3">
+            <div class="column span-full">
                 <h2 class="heading">
                     What's Up Lately?
                 </h2>
@@ -101,8 +101,8 @@
     </section>     <!-- projects-new ends here -->
 
     <section class="projects">
-        <div class="row">
-            <div class="column">
+        <div class="row m-col-2 l-col-3">
+            <div class="column span-full">
                 <h2 class="heading">
                     Our Latest Projects
                 </h2>
@@ -159,8 +159,8 @@
     </section>     <!-- projects-new ends here -->
 
     <section class="thingsofabove">
-        <div class="row">
-            <div class="column">
+        <div class="row l-col-2">
+            <div class="column span-full">
                 <h2 class="heading">
                     Thingsofabove
                 </h2>
@@ -175,7 +175,7 @@
     </section>
 
     <div class="sponsors">
-        <div class="row">
+        <div class="row m-col-5">
             <div class="column">
                 <img src="img/Fortnite.png" alt="placeholder">
             </div>
@@ -195,8 +195,8 @@
     </div>
 
     <footer class="page__footer">
-        <div class="row">
-            <div class="page__footer__intro column">
+        <div class="row m-col-2 l-col-4">
+            <div class="page__footer__intro column span-full">
                 <h3 class="heading">
                     Pewee Herman Intro
                 </h3>
