--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     What's Up Lately?
                 </h2>
             </div>
-            <div class="column">
+            <div class="column special-project">
                 <figure class="project">
                     <img src="img/Fortnite.png" alt="placeholder">
                     <figcaption class="project__caption">
